--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   "dependencies": {
     "@ledgerhq/hw-transport": "^5",
     "bech32": "^1.1.3",
-    "ripemd160": "^2.0.2"
+    "ripemd160": "^2.0.2",
+    "node-hid": "^2.1.1"
   },
   "devDependencies": {
     "@ledgerhq/hw-transport-node-hid": "^5",
-    "@ledgerhq/hw-transport-u2f": "^5",
+    "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
     "@ledgerhq/hw-transport-webusb": "^5",
     "@ledgerhq/logs": "^5",
     "@types/jest": "^26.0.0",
@@ -56,7 +57,7 @@
     "build": "tsc",
     "test:unit": "jest -c jest.config.unit.js",
     "test:integration": "jest -c jest.config.integration.js --runInBand --detectOpenHandles",
-    "serve": "openssl req -nodes -new -x509 -config certs/openssl.cnf -keyout certs/server.key -out certs/server.cert; openssl x509 -in certs/server.cert -out certs/cert.pem -outform PEM; vue-cli-service serve vue_example/main.js"
+    "serve": "openssl req -nodes -new -x509 -config certs/openssl.cnf -keyout certs/server.key -out certs/server.cert; openssl x509 -in certs/server.cert -out certs/cert.pem -outform PEM; vue-cli-service serve src/main.js"
   },
   "moduleDirectories": [
     "node_modules",
